[gd_scene load_steps=24 format=2]

[ext_resource path="res://scripts/player.gd" type="Script" id=1]
[ext_resource path="res://scripts/platform.gd" type="Script" id=2]
[ext_resource path="res://assets/white48.png" type="Texture" id=3]
[ext_resource path="res://assets/selfie.jpg" type="Texture" id=4]
[ext_resource path="res://scripts/opentablink.gd" type="Script" id=5]

[sub_resource type="Shader" id=16]
code = "shader_type canvas_item;

// Author @patriciogv - 2015
// Title: Matrix

float random(in float x){ return fract(sin(x)*43758.5453); }
float random2(in vec2 st){ return fract(sin(dot(st.xy ,vec2(12.9898,78.233))) * 43758.5453); }

float randomChar(vec2 outer,vec2 inner){
    float grid = 5.;
    vec2 margin = vec2(.2,.05);
    vec2 borders = step(margin,inner)*step(margin,1.-inner);
    vec2 ipos = floor(inner*grid);
    vec2 fpos = fract(inner*grid);
    return step(.5,random2(outer*64.+ipos)) * borders.x * borders.y * step(0.01,fpos.x) * step(0.01,fpos.y);
}

void fragment(){
    vec2 st = FRAGCOORD.xy/(1.0/SCREEN_PIXEL_SIZE)*5.;
    st.y *= (1.0/SCREEN_PIXEL_SIZE).y/(1.0/SCREEN_PIXEL_SIZE).x;
    vec3 color = vec3(0.0);

    float rows = 15.0; //1.0;
    vec2 ipos = floor(st*rows);
    vec2 fpos = fract(st*rows);

    ipos += vec2(0.,floor(mod(TIME*12., 1200.)*random(ipos.x+1.)));

    float pct = 1.0;
    pct *= randomChar(ipos,fpos);
	pct *= random2(ipos);

    color = vec3(pct);
	color.r = 0.;
	color.b = 0.;
    color.g /= 2.0;
	COLOR = vec4( color , 1.0);
}
"

[sub_resource type="ShaderMaterial" id=17]
shader = SubResource( 16 )

[sub_resource type="Animation" id=18]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=19]
resource_name = "open"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 512, 10 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 12, 303 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 40, 10 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 23, 4 )

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("TextPopUp:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TextPopUp:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("TextPopUp:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -171, -116 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "popup"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("TextPopUp:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TextPopUp:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("TextPopUp:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -177, -13 ), Vector2( -171, -116 ) ]
}

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("TextPopUp:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TextPopUp:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("TextPopUp:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -171, -116 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "popup"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("TextPopUp:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TextPopUp:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("TextPopUp:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -145, -13 ), Vector2( -145, -116 ) ]
}

[sub_resource type="Animation" id=12]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("TextPopUp:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TextPopUp:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("TextPopUp:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -171, -116 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "popup"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("TextPopUp:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TextPopUp:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("TextPopUp:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -177, -13 ), Vector2( -171, -116 ) ]
}

[sub_resource type="Animation" id=14]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("TextPopUp:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TextPopUp:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("TextPopUp:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -171, -116 ) ]
}

[sub_resource type="Animation" id=15]
resource_name = "popup"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("TextPopUp:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TextPopUp:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("TextPopUp:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -80, -13 ), Vector2( -80, -116 ) ]
}

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 16, 27 )

[sub_resource type="Animation" id=7]
resource_name = "jump"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.25, 0.75 ), Vector2( 0.75, 1.25 ), Vector2( 1, 1 ) ]
}

[node name="Control" type="ColorRect"]
material = SubResource( 17 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "open"
anims/RESET = SubResource( 18 )
anims/open = SubResource( 19 )

[node name="Node2D" type="Node2D" parent="."]

[node name="Floor" type="StaticBody2D" parent="Node2D"]
position = Vector2( 526, 601 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Floor"]
position = Vector2( -13, 0 )
shape = SubResource( 1 )

[node name="WallLeft" type="StaticBody2D" parent="Node2D"]
position = Vector2( 526, 540 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/WallLeft"]
position = Vector2( -516, -236 )
shape = SubResource( 5 )

[node name="WallLeft2" type="StaticBody2D" parent="Node2D"]
position = Vector2( 526, 540 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/WallLeft2"]
position = Vector2( 504, -236 )
shape = SubResource( 5 )

[node name="PlatformAbout" type="StaticBody2D" parent="Node2D"]
position = Vector2( 216, 526 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Node2D/PlatformAbout"]
self_modulate = Color( 0.113725, 0.235294, 0.176471, 1 )
position = Vector2( -0.5, -1.90735e-06 )
scale = Vector2( 1.64583, 0.375 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/PlatformAbout"]
shape = SubResource( 2 )

[node name="Label" type="Label" parent="Node2D/PlatformAbout"]
margin_left = -20.0
margin_top = -7.0
margin_right = 18.0
margin_bottom = 7.0
text = "About"

[node name="TextPopUp" type="Label" parent="Node2D/PlatformAbout"]
visible = false
margin_left = -171.0
margin_top = -116.0
margin_right = 176.0
margin_bottom = -102.0
rect_pivot_offset = Vector2( 176, 7 )
text = "I'm an engineer passionate about interactive software!"

[node name="Area2D" type="Area2D" parent="Node2D/PlatformAbout"]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/PlatformAbout/Area2D"]
position = Vector2( 1, -10 )
shape = SubResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Node2D/PlatformAbout"]
anims/RESET = SubResource( 8 )
anims/popup = SubResource( 9 )

[node name="PlatformAbout2" type="StaticBody2D" parent="Node2D"]
position = Vector2( 369, 484 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Node2D/PlatformAbout2"]
self_modulate = Color( 0.113725, 0.235294, 0.176471, 1 )
position = Vector2( -0.5, -1.90735e-06 )
scale = Vector2( 1.64583, 0.375 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/PlatformAbout2"]
shape = SubResource( 2 )

[node name="Label" type="Label" parent="Node2D/PlatformAbout2"]
margin_left = -31.0
margin_top = -7.0
margin_right = 31.0
margin_bottom = 7.0
text = "Education"

[node name="TextPopUp" type="Label" parent="Node2D/PlatformAbout2"]
visible = false
margin_left = -171.0
margin_top = -116.0
margin_right = 114.0
margin_bottom = -102.0
rect_pivot_offset = Vector2( 145, 7 )
text = "B.A. Philosophy at the University of Missouri"

[node name="Area2D" type="Area2D" parent="Node2D/PlatformAbout2"]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/PlatformAbout2/Area2D"]
position = Vector2( 1, -10 )
shape = SubResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Node2D/PlatformAbout2"]
anims/RESET = SubResource( 10 )
anims/popup = SubResource( 11 )

[node name="PlatformAbout3" type="StaticBody2D" parent="Node2D"]
position = Vector2( 522, 449 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Node2D/PlatformAbout3"]
self_modulate = Color( 0.113725, 0.235294, 0.176471, 1 )
position = Vector2( -0.5, -1.90735e-06 )
scale = Vector2( 1.64583, 0.375 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/PlatformAbout3"]
shape = SubResource( 2 )

[node name="Label" type="Label" parent="Node2D/PlatformAbout3"]
margin_left = -18.0
margin_top = -7.0
margin_right = 20.0
margin_bottom = 7.0
rect_pivot_offset = Vector2( 19, 7 )
text = "Links"

[node name="TextPopUp" type="Label" parent="Node2D/PlatformAbout3"]
visible = false
margin_left = -171.0
margin_top = -116.0
margin_right = 176.0
margin_bottom = -102.0
rect_pivot_offset = Vector2( 176, 7 )

[node name="Github" type="Button" parent="Node2D/PlatformAbout3/TextPopUp"]
margin_left = 147.0
margin_top = -37.0
margin_right = 199.0
margin_bottom = -17.0
text = "github"
script = ExtResource( 5 )

[node name="Itch" type="Button" parent="Node2D/PlatformAbout3/TextPopUp"]
margin_left = 147.0
margin_top = -11.0
margin_right = 199.0
margin_bottom = 9.0
text = "itch"
script = ExtResource( 5 )
addr = "https://jayaarrgh.itch.io/"

[node name="Area2D" type="Area2D" parent="Node2D/PlatformAbout3"]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/PlatformAbout3/Area2D"]
position = Vector2( 1, -10 )
shape = SubResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Node2D/PlatformAbout3"]
anims/RESET = SubResource( 12 )
anims/popup = SubResource( 13 )

[node name="PlatformAbout4" type="StaticBody2D" parent="Node2D"]
position = Vector2( 838, 546 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Node2D/PlatformAbout4"]
self_modulate = Color( 0.113725, 0.235294, 0.176471, 1 )
position = Vector2( -0.5, -1.90735e-06 )
scale = Vector2( 1.64583, 0.375 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/PlatformAbout4"]
shape = SubResource( 2 )

[node name="Label" type="Label" parent="Node2D/PlatformAbout4"]
margin_left = -16.0
margin_top = -7.0
margin_right = 22.0
margin_bottom = 7.0
text = "Skills"

[node name="TextPopUp" type="Label" parent="Node2D/PlatformAbout4"]
visible = false
margin_left = -171.0
margin_top = -116.0
margin_right = 9.0
margin_bottom = -68.0
rect_pivot_offset = Vector2( 88, 16 )
text = "C++, C#, Python, Golang
GLSL, Godot Evangelist
18+ years making music"
valign = 1

[node name="Area2D" type="Area2D" parent="Node2D/PlatformAbout4"]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/PlatformAbout4/Area2D"]
position = Vector2( 1, -10 )
shape = SubResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Node2D/PlatformAbout4"]
anims/RESET = SubResource( 14 )
anims/popup = SubResource( 15 )

[node name="Player" type="KinematicBody2D" parent="Node2D"]
position = Vector2( 66, 490 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="Node2D/Player"]
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Player"]
shape = SubResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Node2D/Player"]
anims/jump = SubResource( 7 )

[node name="Label" type="Label" parent="."]
margin_left = 24.0
margin_top = 20.0
margin_right = 137.0
margin_bottom = 68.0
text = "Move Left:                 A
Move Right:               D
Jump:                  Space
Click pop up buttons    "
align = 2

[connection signal="body_entered" from="Node2D/PlatformAbout/Area2D" to="Node2D/PlatformAbout" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Node2D/PlatformAbout/Area2D" to="Node2D/PlatformAbout" method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="Node2D/PlatformAbout2/Area2D" to="Node2D/PlatformAbout2" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Node2D/PlatformAbout2/Area2D" to="Node2D/PlatformAbout2" method="_on_Area2D_body_exited"]
[connection signal="pressed" from="Node2D/PlatformAbout3/TextPopUp/Github" to="Node2D/PlatformAbout3/TextPopUp/Github" method="_on_Github_pressed"]
[connection signal="pressed" from="Node2D/PlatformAbout3/TextPopUp/Itch" to="Node2D/PlatformAbout3/TextPopUp/Itch" method="_on_Github_pressed"]
[connection signal="body_entered" from="Node2D/PlatformAbout3/Area2D" to="Node2D/PlatformAbout3" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Node2D/PlatformAbout3/Area2D" to="Node2D/PlatformAbout3" method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="Node2D/PlatformAbout4/Area2D" to="Node2D/PlatformAbout4" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Node2D/PlatformAbout4/Area2D" to="Node2D/PlatformAbout4" method="_on_Area2D_body_exited"]
